// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login rendering upon arrival RENDERER 1`] = `
<div
  className="d-flex justify-content-center"
>
  <div
    className="login p-3 shadow rounded text-center text-white"
  >
    <div>
      <h3>
        Connect to play!
      </h3>
    </div>
    <form
      className="form-login"
      onSubmit={[Function]}
    >
      <div
        className="m-3"
      >
        <label>
          Username:
        </label>
        <input
          className="form-control"
          error={0}
          id="username"
          name="username"
          onChange={[Function]}
          placeholder="Thyrse, Ziphlot..."
          type="text"
          value=""
        />
      </div>
      <div
        className="d-flex justify-content-center"
      >
        <button
          className="btn btn-white"
          type="submit"
        >
          Play
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Should throw an error on submission without username provided 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Login>
    <div
      className="d-flex justify-content-center"
    >
      <div
        className="login p-3 shadow rounded text-center text-white"
      >
        <div>
          <h3>
            Connect to play!
          </h3>
        </div>
        <form
          className="form-login"
          onSubmit={[Function]}
        >
          <div
            className="m-3"
          >
            <label>
              Username:
            </label>
            <input
              className="form-control"
              error={0}
              id="username"
              name="username"
              onChange={[Function]}
              placeholder="Thyrse, Ziphlot..."
              type="text"
              value=""
            />
          </div>
          <div
            className="d-flex justify-content-center"
          >
            <button
              className="btn btn-white"
              type="submit"
            >
              Play
            </button>
          </div>
        </form>
      </div>
    </div>
  </Login>
</Provider>
`;
